-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.1
-
None
-
Reproduced on an iPhone 6S, Xcode 12.4
-
-
83fb8fe208ec816df7d04c8247d5696d95f2cab1 (qt/qtbase/dev) ae1869ab63dd37f2f971c4b29100fdd2b1bd2272 (qt/qtbase/6.1) b130d16a27399497739a56bd1a5a824a6a5885b1 (qt/qtbase/6.0) c0d3c9e0240e314b835c6585e26ad9b3bf21604d (qt/tqtc-qtbase/5.15)
Qt 6.0.1 has a very large and serious leak that appears to be related to visual refreshes.
Simple repro:
- Take calculator sample (calqlatr)
- Modify app QML with a Timer that changes the background color (if you don't want to modify it, simply tapping on the app reproduces the issue)
- Run and view memory usage in Xcode
- You will see memory use around 500K a second
- The app will be terminated once it hits 1.5G (after around 20 minutes)
The app was built and run Retail. The issue also occurs with the phone isn't being run with Xcode. I have been unable to reproduce on Windows or Android.
Screen shots and video (animated GIF) attached showing the severity of the problem.
This problem makes Qt 6.0.1 iOS unusable.
| For Gerrit Dashboard: QTBUG-91438 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 338246,7 | rhi: metal: Use the layer as the single source of truth | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 338311,2 | rhi: metal: Use the layer as the single source of truth | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |
| 338312,2 | rhi: metal: Use the layer as the single source of truth | 6.0 | qt/qtbase | Status: MERGED | +2 | 0 |
| 373933,2 | rhi: metal: Use the layer as the single source of truth | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |